fix: flex-wrap

--- a/src/entities/PageHeader/ui/PageHeader.module.scss
+++ b/src/entities/PageHeader/ui/PageHeader.module.scss
@@ -6,6 +6,7 @@
 
 .breadcrumbs {
   display: inline-flex;
+  flex-wrap: wrap;
   gap: 3px;
 }
 
